--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
   @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
   body {
@@ -9,11 +10,15 @@
 }
 .skeleton {
   background-color: #eee;
-  background-image: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
+  background-image: linear-gradient(
+    110deg,
+    #ececec 8%,
+    #f5f5f5 18%,
+    #ececec 33%
+  );
   background-size: 200% 100%;
   animation: 1.5s shine linear infinite;
 }
-
 @keyframes shine {
   to {
     background-position-x: -200%;
@@ -23,37 +28,32 @@
   opacity: 0;
   transform: scale(0.5);
 }
-
 .zoom-enter-active .content {
   opacity: 1;
   transform: scale(1);
 }
-
 .zoom-exit .content {
   opacity: 1;
 }
-
 .zoom-exit-active .content {
   opacity: 0;
   transform: scale(0.5);
 }
 
+// Fade
+
 .fade-enter .tooltip {
   opacity: 0;
 }
-
 .fade-enter-active .tooltip {
   opacity: 1;
 }
-
 .fade-exit .tooltip {
   opacity: 1;
 }
-
 .fade-exit-active .tooltip {
   opacity: 0;
 }
-
 .toggle-input {
   /* visually hidden but still accessible */
   border: 0;
@@ -65,4 +65,4 @@
   position: absolute;
   width: 1px;
   white-space: nowrap;
-}/*# sourceMappingURL=index.css.map */
+}
